[tool.poetry]
name = "backend-main"
version = "0.1.0"
description = "A backend API project"
authors = ["HANUI <130272873+skytogether@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
